<resources>
    <string name="app_name">Investify</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="age">Age</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_registered">Already registered? Login</string>
    <string name="not_registered">Not registered? Sign Up</string>
    <string name="welcome_to_investify">Welcome to Investify</string>
    <string name="plan_your_investments">Plan Your Investments</string>
    <string name="expense_tracker">Expense Tracker</string>
    <string name="investment_goal">Investment Goal</string>
    <string name="risk_tolerance">Risk Tolerance</string>
    <string name="investment_period">Investment Period (Years)</string>
    <string name="calculate">Calculate</string>
    <string name="recommended_allocation">Recommended Allocation</string>
    <string name="recommended_funds">Recommended Funds</string>
    <string name="trending_stocks">Trending Stocks</string>
    <string name="news">News</string>
    <string name="logout">Logout</string>
    <string name="loading">Loading...</string>
    <string name="finance_quiz">Finance Quiz</string>
    <string name="try_again">Try Again</string>
    <string name="dashboard">Dashboard</string>
    <string name="quiz_results">Quiz Results</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="your_score">Your Score</string>
    <string name="app_logo">Investify</string>
    <string-array name="expense_categories">
        <item>Food</item>
        <item>Entertainment</item>
        <item>Shopping</item>
        <item>Transport</item>
        <item>Others</item>
    </string-array>



</resources>
